--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "NODE_env=dev nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -17,16 +17,27 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "docker compose exec api npx jest --config ./test/jest-e2e.json",
+    "test:e2e:cov": "docker compose exec api npx jest --config ./test/jest-e2e.json --coverage",
+    "prepare": "husky",
+    "prisma:migrate:dev": "docker compose exec api npx prisma migrate dev --skip-generate",
+    "prisma:migrate:reset": "docker compose exec api npx prisma migrate reset",
+    "prisma:migrate:prod": "npx prisma migrate deploy",
+    "prisma:studio": "docker compose exec api npx prisma studio"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.9",
     "@nestjs/core": "^10.3.9",
     "@nestjs/platform-express": "^10.3.9",
+    "@nestjs/swagger": "^7.3.1",
+    "@nestjs/terminus": "^10.2.3",
+    "@prisma/client": "^5.15.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
     "@nestjs/testing": "^10.3.9",
@@ -39,10 +50,13 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.7",
     "prettier": "^3.3.2",
+    "prisma": "^5.15.0",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.3.4",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.1.4",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
@@ -51,9 +65,8 @@
   },
   "jest": {
     "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
+      "ts",
+      "js"
     ],
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
@@ -61,9 +74,32 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "**/*.(t|j)s",
+      "!main.ts",
+      "!**/*.module.ts",
+      "!**/*.config.ts",
+      "!**/*.controller.ts",
+      "!**/*.repository.ts",
+      "!**/*.dto.ts",
+      "!**/*.exception.ts",
+      "!**/*.mock.ts",
+      "!**/*.fake.ts",
+      "!**/*.guard.ts",
+      "!**/*.decorator.ts",
+      "!**/db/**"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 100
+      }
+    },
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    },
+    "clearMocks": true
   }
 }
