--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     depends_on:
       - db
     env_file:
-      - .env
+      - .env.dev
     ports:
       - 3000:3333
       # - 9229:9229
@@ -20,6 +20,6 @@ services:
   db:
     image: postgres
     env_file:
-      - .env
+      - .env.dev
     ports:
       - 35001:5432
