--- a/package.json
+++ b/package.json
@@ -7,23 +7,25 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "NODE_env=dev nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "docker compose exec api npx jest --config ./test/jest-e2e.json",
-    "test:e2e:cov": "docker compose exec api npx jest --config ./test/jest-e2e.json --coverage",
-    "prepare": "node .husky/install.mjs | true",
-    "prisma:migrate:dev": "docker compose exec api npx prisma migrate dev --skip-generate",
-    "prisma:migrate:reset": "docker compose exec api npx prisma migrate reset",
-    "prisma:migrate:prod": "npx prisma migrate deploy",
-    "prisma:studio": "docker compose exec api npx prisma studio"
+        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+        "start": "nest start",
+        "start:dev": "NODE_env=dev nest start -w",
+        "start:debug": "nest start --debug --watch",
+        "start:prod": "node dist/main",
+        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+        "test": "vitest run",
+        "test:staged": "vitest run --passWithNoTests",
+        "test:watch": "vitest",
+        "test:cov": "npm run test -- --coverage",
+        "test:ui": "vitest --ui --coverage --coverage.reporter=html",
+        "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
+        "test:e2e": "docker compose exec api npx vitest run --config ./test./vitest-e2e.config.ts",
+        "test:e2e:cov": "docker compose exec api npm run test:e2e -- --coverage",
+        "prepare": "node .husky/install.mjs | true",
+        "prisma:migrate:dev": "docker compose exec api npx prisma migrate dev --skip-generate",
+        "prisma:migrate:reset": "docker compose exec api npx prisma migrate reset",
+        "prisma:migrate:prod": "npx prisma migrate deploy",
+        "prisma:studio": "docker compose exec api npx prisma studio"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.10",
@@ -47,6 +49,8 @@
     "@nestjs/cli": "^10.4.2",
     "@nestjs/schematics": "^10.1.2",
     "@nestjs/testing": "^10.3.10",
+    "@swc/cli": "^0.4.0",
+    "@swc/core": "^1.6.13",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.10",
