--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,4 @@
 {
-  "*.ts": ["eslint --fix", "prettier --write", "jest --findRelatedTests --passWithNoTests"],
+  "*.ts": ["eslint --fix", "prettier --write", "npm run test:staged"],
   "*.md": "prettier --list-different"
 }
