--- a/package.json
+++ b/package.json
@@ -7,25 +7,25 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-        "start": "nest start",
-        "start:dev": "NODE_env=dev nest start -w",
-        "start:debug": "nest start --debug --watch",
-        "start:prod": "node dist/main",
-        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-        "test": "vitest run",
-        "test:staged": "vitest run --passWithNoTests",
-        "test:watch": "vitest",
-        "test:cov": "npm run test -- --coverage",
-        "test:ui": "vitest --ui --coverage --coverage.reporter=html",
-        "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
-        "test:e2e": "docker compose exec api npx vitest run --config ./test./vitest-e2e.config.ts",
-        "test:e2e:cov": "docker compose exec api npm run test:e2e -- --coverage",
-        "prepare": "node .husky/install.mjs | true",
-        "prisma:migrate:dev": "docker compose exec api npx prisma migrate dev --skip-generate",
-        "prisma:migrate:reset": "docker compose exec api npx prisma migrate reset",
-        "prisma:migrate:prod": "npx prisma migrate deploy",
-        "prisma:studio": "docker compose exec api npx prisma studio"
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "NODE_env=dev nest start -w",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "vitest run",
+    "test:staged": "vitest run --passWithNoTests",
+    "test:watch": "vitest",
+    "test:cov": "npm run test -- --coverage",
+    "test:ui": "vitest --ui --coverage --coverage.reporter=html",
+    "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
+    "test:e2e": "docker compose exec api npx vitest run --config ./test./vitest-e2e.config.ts",
+    "test:e2e:cov": "docker compose exec api npm run test:e2e -- --coverage",
+    "prepare": "node .husky/install.mjs | true",
+    "prisma:migrate:dev": "docker compose exec api npx prisma migrate dev --skip-generate",
+    "prisma:migrate:reset": "docker compose exec api npx prisma migrate reset",
+    "prisma:migrate:prod": "npx prisma migrate deploy",
+    "prisma:studio": "docker compose exec api npx prisma studio"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.10",
@@ -52,66 +52,29 @@
     "@swc/cli": "^0.4.0",
     "@swc/core": "^1.6.13",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.10",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
+    "@vitest/coverage-v8": "^2.0.2",
+    "@vitest/ui": "^2.0.2",
     "eslint": "^9.6.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.8.0",
     "husky": "^9.0.11",
-    "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
     "prettier": "3.3.2",
     "prisma": "^5.16.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.2",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^7.16.0"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s",
-      "!main.ts",
-      "!**/*.module.ts",
-      "!**/*.config.ts",
-      "!**/*.controller.ts",
-      "!**/*.repository.ts",
-      "!**/*.dto.ts",
-      "!**/*.exception.ts",
-      "!**/*.mock.ts",
-      "!**/*.fake.ts",
-      "!**/*.guard.ts",
-      "!**/*.decorator.ts",
-      "!**/db/**"
-    ],
-    "coverageDirectory": "../coverage",
-    "coverageThreshold": {
-      "global": {
-        "branches": 100,
-        "functions": 100,
-        "lines": 100
-      }
-    },
-    "testEnvironment": "node",
-    "moduleNameMapper": {
-      "^src/(.*)$": "<rootDir>/$1"
-    },
-    "clearMocks": true
+    "typescript-eslint": "^7.16.0",
+    "unplugin-swc": "^1.5.1",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^2.0.2"
   },
   "overrides": {
     "eslint": "^9.6.0"
