docs: change docs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qrdapio-client-api",
+  "name": "template-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -21,11 +21,7 @@
     "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
     "test:e2e": "docker compose exec api npx vitest run --config ./test./vitest-e2e.config.ts",
     "test:e2e:cov": "docker compose exec api npm run test:e2e -- --coverage",
-    "prepare": "node .husky/install.mjs | true",
-    "prisma:migrate:dev": "docker compose exec api npx prisma migrate dev --skip-generate",
-    "prisma:migrate:reset": "docker compose exec api npx prisma migrate reset",
-    "prisma:migrate:prod": "npx prisma migrate deploy",
-    "prisma:studio": "docker compose exec api npx prisma studio"
+    "prepare": "node .husky/install.mjs | true"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.10",
