chore: update Nestjs CLI installation command in build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Install Nestjs CLI
-      run: npm install -g @nestjs/cli
+      run: npm install @nestjs/cli
     - name: verify app build
       run: npm ci --production
     - run: npm run build --if-present
