--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -23,6 +23,8 @@ jobs:
         cache: 'npm'
     - name: install dependencies
       run: npm ci
+    - name: build
+      run: npm run build --if-present
     - name: Testing
       run: npm run test:cov
       
