--- a/.env.dev
+++ b/.env.dev
@@ -1,9 +1,5 @@
-DATABASE_URL="postgresql://docker:docker@db:5432/qrdapio?schema=public"
-
-POSTGRES_USER=docker
-POSTGRES_PASSWORD=docker
-POSTGRES_DB=qrdapio
-PORT=3333
+DATABASE_URL="postgresql://docker:docker@db:5432/template?schema=public"
+DATABASE_TYPE=postgres
 
 JWT_SECRET=secret
 JWT_EXPIRES_IN=300s
